--- a/views/game.ejs
+++ b/views/game.ejs
@@ -9,177 +9,166 @@
         <link rel = "stylesheet"type = "text/css" href = "stylesheets/game.css" />   
         <script type="text/javascript" src="javascripts/jquery.js"> </script>
         <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
-
-        <!-- TODO: make styling only using bootstrap -->
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
     </head>
     
     <body> 
-    <!-- =================================================================-->  
-    <main class="main">
-        <div class="body"> 
-            <header class="header container-fluid">
-                <!-- <h4 id="timertext2">TIMER:</h4>
-                <div id="timertext">30</div> -->
-                
-                <!-- the text "seconds left" must be visible only when the game starts (so when opponents are found)  -->
-                <!-- <h4 id="timer">seconds</h4>
-                <h4 id="timer">left</h4> -->
-                
-                <div class="d-flex justify-content-between">
-                    <h2>
-                        <image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">
-                        BATTLESHIP V
-                    </h2>
-                    <input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image">
-                </div>
+        <main class="main">
+            <div class="body"> 
+                <header class="header container-fluid">
                     
-            </header>
-            
-            <div class="notifications-container mt-2">
-                <div id="notification" class="alert alert-primary" role="alert">
-                    <%# Here use JQuery to place notification text %> 
-                </div>
-            </div> 
-        
-            <div class="battlefield container-fluid">
-
-                <div class="container-fluid Scoreboard">
-                    <div class="row justify-content-center text-center">
-                        <div class="col" id="Score">
-                            <h4>Your Hits:</h4>
-                            <h4 class="col" id="hitsself">
-                                0
-                            </h4>
-                        </div>
-                        <div class="col" id="Score">
-                            <h4>Enemy's Hits:</h4>
-                            <h4 class="col" id="hitsrival">
-                                0
-                            </h4>
-                        </div>
+                    <div class="d-flex justify-content-between">
+                        <h2>
+                            <image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">
+                            BATTLESHIP V
+                        </h2>
+                        <input id="fullscreen" src="images/expand.png" type="image">
                     </div>
-                </div>
+                        
+                </header>
                 
-                <div class="d-flex align-items-center justify-content-center m-5">
-                    <%# return the next character of the current char "c" in the ASCII ordering/ecnoding %>
-                    <% 
-                        function nextChar(c) {
-                            return String.fromCharCode(c.charCodeAt(0) + 1);
-                        } 
-                    %>
+                <div class="notifications-container mt-2">
+                    <div id="notification" class="alert alert-primary" role="alert">
+                        <%# Here JQuery is used to place notification text %> 
+                    </div>
+                </div> 
+            
+                <div class="battlefield container-fluid">
 
-                    <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
-                    <% var currLetter = 'A' %>
-
-                    <%# Defining the variables to be used for loops %>
-                    <% var row, col, i; %>
-
-                    <%# Create grid of current player %>
-                    <div class="col">
-                        <h4 id="playera_tag">Your Grid</h4>
-                        <div class="battlefield_self">
-                            <table class="battlefield_self_table">
-                                <tbody>
-                                    <%# Create the first row of letters for coordinates %> 
-                                    <tr class="battlefield_row">
-                                        <td class="battlefield_cell_self_coord">
-                                        </td>
-                                        <td class="battlefield_cell_self_coord">
-                                            <%= currLetter %>
-                                        </td>
-                                        <% for(i = 0; i < gridDim.cols - 1; i++) { %>
-                                            <td class="battlefield_cell_self_coord">
-                                            <% currLetter = nextChar(currLetter) %>
-                                            <%= currLetter %>
-                                            </td>
-                                        <% } %>
-                                    </tr>
-
-                                    <%# Create the clickable tiles and the numbered rows for coordinates %> 
-                                    <% for (row = 0; row < gridDim.rows; row++) { %>
-                                        <tr class="battlefield_row">
-                                            <td class="battlefield_cell_self_coord">
-                                                <%= row + 1 %> 
-                                            </td>
-                                            <% for(col = 0; col < gridDim.cols; col++) { %>
-                                                <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
-                                                </td>
-                                            <% } %>
-                                        </tr>
-                                    <% } %>
-                                </tbody>        
-                            </table>         
+                    <div class="container-fluid Scoreboard">
+                        <div class="row justify-content-center text-center">
+                            <div class="col" id="Score">
+                                <h4>Your Hits:</h4>
+                                <h4 class="col" id="hitsself">
+                                    0
+                                </h4>
+                            </div>
+                            <div class="col" id="Score">
+                                <h4>Enemy's Hits:</h4>
+                                <h4 class="col" id="hitsrival">
+                                    0
+                                </h4>
+                            </div>
                         </div>
                     </div>
+                    
+                    <div class="d-flex align-items-center justify-content-center mt-5 mx-auto">
+                        <%# return the next character of the current char "c" in the ASCII ordering/ecnoding %>
+                        <% 
+                            function nextChar(c) {
+                                return String.fromCharCode(c.charCodeAt(0) + 1);
+                            } 
+                        %>
 
-                    <%# generate rival grid %>
-                    <div class="col">
-                        <h4 id="playerb_tag">Enemy's Grid</h4>
-                        <div class="battlefield_rival">
-                            <table class="battlefield_rival_table">
-                                <%# Reset currLetter to start letter 'A' %> 
-                                <% currLetter = 'A' %>
-                                
-                                <%# Defining the variables to be used for loops %>
-                                <% var row, col, i; %>
+                        <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
+                        <% var currLetter = 'A' %>
 
-                                <tbody>
-                                    <%# Create the first row of letters for coordinates %>
-                                    <tr class="battlefield_row">
-                                        <td class="battlefield_cell_rival_coord">
-                                        </td>
-                                        <td class="battlefield_cell_rival_coord">
-                                            <%= currLetter %>
-                                        </td>
-                                        <% for(i = 0; i < gridDim.cols - 1; i++) { %>
-                                            <td class="battlefield_cell_rival_coord">
-                                            <% currLetter = nextChar(currLetter) %>
-                                            <%= currLetter %>
-                                            </td>
-                                        <% } %>
-                                    </tr>
+                        <%# Defining the variables to be used for loops %>
+                        <% var row, col, i; %>
 
-                                    <%# Create the clickable tiles and the numbered rows for coordinates %> 
-                                    <% for (row = 0; row < gridDim.rows; row++) { %>
+                        <%# Create grid of current player %>
+                        <div class="col">
+                            <h4 id="playera_tag">Your Grid</h4>
+                            <div class="battlefield_self">
+                                <table class="battlefield_self_table">
+                                    <tbody>
+                                        <%# Create the first row of letters for coordinates %> 
                                         <tr class="battlefield_row">
-                                            <td class="battlefield_cell_rival_coord">
-                                                <%= row + 1 %> 
+                                            <td class="battlefield_cell_self_coord">
                                             </td>
-                                            <% for(col = 0; col < gridDim.cols; col++) { %>
-                                                <td class="battlefield_cell_rival_tile" data-x="<%= col %>"  data-y="<%= row %>">
+                                            <td class="battlefield_cell_self_coord">
+                                                <%= currLetter %>
+                                            </td>
+                                            <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                                <td class="battlefield_cell_self_coord">
+                                                <% currLetter = nextChar(currLetter) %>
+                                                <%= currLetter %>
                                                 </td>
                                             <% } %>
                                         </tr>
-                                    <% } %>
-                                </tbody>
-                            </table>
+
+                                        <%# Create the clickable tiles and the numbered rows for coordinates %> 
+                                        <% for (row = 0; row < gridDim.rows; row++) { %>
+                                            <tr class="battlefield_row">
+                                                <td class="battlefield_cell_self_coord">
+                                                    <%= row + 1 %> 
+                                                </td>
+                                                <% for(col = 0; col < gridDim.cols; col++) { %>
+                                                    <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
+                                                    </td>
+                                                <% } %>
+                                            </tr>
+                                        <% } %>
+                                    </tbody>        
+                                </table>         
+                            </div>
+                        </div>
+
+                        <%# generate rival grid %>
+                        <div class="col">
+                            <h4 id="playerb_tag">Enemy's Grid</h4>
+                            <div class="battlefield_rival">
+                                <table class="battlefield_rival_table">
+                                    <%# Reset currLetter to start letter 'A' %> 
+                                    <% currLetter = 'A' %>
+                                    
+                                    <%# Defining the variables to be used for loops %>
+                                    <% var row, col, i; %>
+
+                                    <tbody>
+                                        <%# Create the first row of letters for coordinates %>
+                                        <tr class="battlefield_row">
+                                            <td class="battlefield_cell_rival_coord">
+                                            </td>
+                                            <td class="battlefield_cell_rival_coord">
+                                                <%= currLetter %>
+                                            </td>
+                                            <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                                <td class="battlefield_cell_rival_coord">
+                                                <% currLetter = nextChar(currLetter) %>
+                                                <%= currLetter %>
+                                                </td>
+                                            <% } %>
+                                        </tr>
+
+                                        <%# Create the clickable tiles and the numbered rows for coordinates %> 
+                                        <% for (row = 0; row < gridDim.rows; row++) { %>
+                                            <tr class="battlefield_row">
+                                                <td class="battlefield_cell_rival_coord">
+                                                    <%= row + 1 %> 
+                                                </td>
+                                                <% for(col = 0; col < gridDim.cols; col++) { %>
+                                                    <td class="battlefield_cell_rival_tile" data-x="<%= col %>"  data-y="<%= row %>">
+                                                    </td>
+                                                <% } %>
+                                            </tr>
+                                        <% } %>
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>	
-    </main>     
-    <!-- =================================================================-->
-    
-    <footer id="footer">
-            <div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-            <div id="footer-m">Support us on patreon!</div>
-            <div id="footer-r">... we need the money...</div>
-    </footer>
-    <!-- below we place the needed scripts to establish Webscoket, game handler etc...  -->
-    <script src="javascripts/FullScreen.js" type="text/javascript"></script>
-    <script type="text/javascript" src="javascripts/statuses.js" ></script>
-    <script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
-    <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
-    <script type="text/javascript" src="javascripts/shared.js"></script>
-    <!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
-    <script type="text/javascript" src="javascripts/messages.js"></script>
-    <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
-    <script type="text/javascript" src="javascripts/game.js"></script>
-    <script type="text/javascript" src="javascripts/initGame.js"></script>
+            </div>	
+        </main>     
+        
+        <footer id="footer">
+                <div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
+                <div id="footer-m">Support us on patreon!</div>
+                <div id="footer-r">... we need the money...</div>
+        </footer>
+
+        <script type="text/javascript" src="javascripts/fullScreen.js"></script>
+        <script type="text/javascript" src="javascripts/statuses.js" ></script>
+        <script type="text/javascript" src="javascripts/shared.js"></script>
+        <script type="text/javascript" src="javascripts/messages.js"></script>
+        <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
+        <script type="text/javascript" src="javascripts/modifyNotification.js" ></script>
+        <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
+        <script type="text/javascript" src="javascripts/game.js"></script>
+        <script type="text/javascript" src="javascripts/initGame.js"></script>
 
     </body>
 
