--- a/views/shipplacement.ejs
+++ b/views/shipplacement.ejs
@@ -1,139 +1,116 @@
-<!-- TODO: This page needs to be shown before "game.html" -->
-<!-- This page is for the player to place all the ships on the board -->
-<!-- before going into the game with another player -->
-<!-- NOTE: when the player place all ships and is the first one to join a game -->
-<!-- then a waiting screen needs to be shown until another player joins the game -->
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<title>Battleship V: Battle Royale Edition</title>   
-	<link rel = "stylesheet"type = "text/css" href = "stylesheets/shipplacement.css" />   
-	<script type="text/javascript" src="javascripts/jquery.js"> </script>
-	<link rel="shortcut icon" type="image/png" href="images/favi.png"/>
-	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
-	<script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+        <title>Battleship V: Battle Royale Edition</title>   
+        <link rel = "stylesheet"type = "text/css" href = "stylesheets/shipplacement.css" />   
+        <script type="text/javascript" src="javascripts/jquery.js"> </script>
+        <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
+        <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
+        <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
 
-</head>
+    </head>
     
-<body> 
- <!-- =================================================================-->  
-   <main class="main">
-	<div class="body"> 
-		<header class="header">
+    <body> 
+        <main class="main">
+            <div class="body"> 
+                <header class="header">
 
-			<input id="fullscreen" src="images/expand.png" action="openFullscreen();" type="image">
-			<h2><image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">BATTLESHIP V</h2>
-				
-		</header>
-		
-		<div class="battlefield">
-            <div class="container">
-                <div class="row mb-3">
-                    <div class="card text-center shadow mx-auto">
-                        <div class="card-body">
-                            <div class="col">
-                                <button class="btn btn-primary" id="randomize-button">Randomize Ships</button>
+                    <input id="fullscreen" src="images/expand.png" type="image">
+                    <h2><image style="vertical-align:middle" src="images/logo.png" width="109px"; height="121px">BATTLESHIP V</h2>
+                        
+                </header>
+                
+                <div class="battlefield">
+                    <div class="container">
+                        <div class="row mb-3">
+                            <div class="card text-center shadow mx-auto">
+                                <div class="card-body">
+                                    <div class="col">
+                                        <button class="btn btn-primary" id="randomize-button">Randomize Ships</button>
+                                    </div>
+                                    <hr>
+                                    <div class="col">
+                                        <button class="btn btn-success btn-lg" id="startgamebutton">Start Game</button>
+                                    </div>
+                                </div>
                             </div>
-                            <hr>
-                            <div class="col">
-                                <button class="btn btn-success btn-lg" id="startgamebutton">Start Game</button>
+                        </div>
+                        
+                        <div class="row align-items-center justify-content-center">
+                            <div class="battlefield_self">
+                                <table class="battlefield_self_table">
+                                        <%# here the grid is auto generated %>
+                                        <%# return the next character of the current char "c" in the ASCII ordering/encoding %>
+                                        <% 
+                                            function nextChar(c) {
+                                                return String.fromCharCode(c.charCodeAt(0) + 1);
+                                            } 
+                                        %>
+
+                                        <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
+                                        <% var currLetter = 'A' %>
+
+                                        <%# Defining the variables to be used for loops %>
+                                        <% var row, col, i; %>
+
+                                        <tbody>
+                                            <%# Create the first row of letters for coordinates %>
+                                            <tr class="battlefield_row">
+                                                <td class="battlefield_cell_self_coord">
+                                                </td>
+                                                <td class="battlefield_cell_self_coord">
+                                                    <%= currLetter %>
+                                                </td>
+                                                <% for(i = 0; i < gridDim.cols - 1; i++) { %>
+                                                    <td class="battlefield_cell_self_coord">
+                                                    <% currLetter = nextChar(currLetter) %>
+                                                    <%= currLetter %>
+                                                    </td>
+                                                <% } %>
+                                            </tr>
+
+                                            <%# Create the clickable tiles and the numbered rows for coordinates %>
+                                            <% for (row = 0; row < gridDim.rows; row++) { %>
+                                                <tr class="battlefield_row">
+                                                    <td class="battlefield_cell_self_coord">
+                                                        <%= row + 1 %>
+                                                    </td>
+                                                    <% for(col = 0; col < gridDim.cols; col++) { %>
+                                                        <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
+                                                        </td>
+                                                    <% } %>
+                                                </tr>
+                                            <% } %>
+                                        
+                                        </tbody>
+                                </table>       
                             </div>
                         </div>
                     </div>
-                    <!-- <div id="roster-sidebar"> -->
-                        <!-- <h4>Place all the ships on the grid</h4> -->
-                        
-                        <%# Don't remove this for future possibility of placing ships on the grid %> 
-                        <!-- <button class="btn primary" id="patrolboat">Patrol Boat = 2 Tiles</button></br>
-                        <button class="btn primary" id="submarine">Submarine = 3 Tiles</button></br>
-                        <button class="btn primary" id="destroyer">Destroyer = 3 Tiles</button></br>
-                        <button class="btn primary" id="battleship">Battleship = 4 Tiles</button></br>
-                        <button class="btn primary" id="carrier">Aircraft Carrier = 5 Tiles</button></br> -->
-                        <!-- <button class="btn btn-primary" id="randomize-button">Randomize Ships</button> -->
-                        
-                        <%# <form action="/play" method="get"> %> 
-                        <!-- <button class="btn" id="startgamebutton" type="submit">Start Game</button> -->
-                        <%# </form> %>
-                    <!-- </div> -->
                 </div>
                 
-                <div class="row align-items-center justify-content-center">
-                    <div class="battlefield_self">
-                        <table class="battlefield_self_table">
-                                <%# here the grid is auto generated %>
-                                <%# return the next character of the current char "c" in the ASCII ordering/encoding %>
-                                <% 
-                                    function nextChar(c) {
-                                        return String.fromCharCode(c.charCodeAt(0) + 1);
-                                    } 
-                                %>
+            </div>	
+        </main>     
+    
+        <footer id="footer">
+            <div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
+            <div id="footer-m">Support us on patreon!</div>
+            <div id="footer-r">... we need the money...</div>
+        </footer>
 
-                                <%# create variable containing the letter to start with when assigning coordinates in the first row of the grid %>
-                                <% var currLetter = 'A' %>
+        <script type="text/javascript" src="javascripts/fullScreen.js"></script>
+        <script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
+        <script type="text/javascript" src="javascripts/shared.js" ></script>
+        <script type="text/javascript" src="javascripts/coordinate.js" ></script>
+        <script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
+        <script type="text/javascript" src="javascripts/shipsGenerator.js"></script>
+        <script type="text/javascript" src="javascripts/shipsPlacement.js"></script>
 
-                                <%# Defining the variables to be used for loops %>
-                                <% var row, col, i; %>
-
-                                <tbody>
-                                    <%# Create the first row of letters for coordinates %>
-                                    <tr class="battlefield_row">
-                                        <td class="battlefield_cell_self_coord">
-                                        </td>
-                                        <td class="battlefield_cell_self_coord">
-                                            <%= currLetter %>
-                                        </td>
-                                        <% for(i = 0; i < gridDim.cols - 1; i++) { %>
-                                            <td class="battlefield_cell_self_coord">
-                                            <% currLetter = nextChar(currLetter) %>
-                                            <%= currLetter %>
-                                            </td>
-                                        <% } %>
-                                    </tr>
-
-                                    <%# Create the clickable tiles and the numbered rows for coordinates %>
-                                    <% for (row = 0; row < gridDim.rows; row++) { %>
-                                        <tr class="battlefield_row">
-                                            <td class="battlefield_cell_self_coord">
-                                                <%= row + 1 %>
-                                            </td>
-                                            <% for(col = 0; col < gridDim.cols; col++) { %>
-                                                <td class="battlefield_cell_self_tile" data-x="<%= col %>"  data-y="<%= row %>">
-                                                </td>
-                                            <% } %>
-                                        </tr>
-                                    <% } %>
-                                
-                                </tbody>
-                        </table>       
-                    </div>
-                </div>
-            </div>
-		</div>
-		
-    </div>	
-   </main>     
- <!-- =================================================================-->
- 
- <footer id="footer">
-		<div id="footer-l">&copy&nbspCopyright 2018  | All rights reserved. </div>
-		<div id="footer-m">Support us on patreon!</div>
-		<div id="footer-r">... we need the money...</div>
-</footer>
-<!-- below we place the needed scripts to establish Webscoket, max hits etc...  -->
-<script src="javascripts/FullScreen.js" type="text/javascript"></script>
-<!-- <script type="text/javascript" src="javascripts/timer.js" ></script> -->
-<script type="text/javascript" src="javascripts/localStorageHandler.js" ></script>
-<script type="text/javascript" src="javascripts/shared.js" ></script>
-<script type="text/javascript" src="javascripts/coordinate.js" ></script>
-<script type="text/javascript" src="javascripts/shipsRenderer.js"></script>
-<script type="text/javascript" src="javascripts/shipsGenerator.js"></script>
-<script type="text/javascript" src="javascripts/shipsPlacement.js"></script>
-
-</body>
+    </body>
 
 
 </html>
