--- a/views/splash.ejs
+++ b/views/splash.ejs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        
         <title>Battleship V: Battle Royale Edition</title>
         <link rel = "stylesheet"type = "text/css" href = "stylesheets/splash.css" />   
         <link rel="shortcut icon" type="image/png" href="images/favi.png"/>
